; ModuleID = '/home/carl/AnghaBench/citus/src/backend/distributed/utils/extr_multi_resowner.c_ResourceOwnerEnlargeJobDirectories.c'
source_filename = "/home/carl/AnghaBench/citus/src/backend/distributed/utils/extr_multi_resowner.c_ResourceOwnerEnlargeJobDirectories.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@RegisteredResownerCallback = common dso_local global i32 0, align 4
@MultiResourceOwnerReleaseCallback = common dso_local global i32 0, align 4
@RegisteredJobDirectories = common dso_local global i32* null, align 8
@TopMemoryContext = common dso_local global i32 0, align 4
@NumAllocatedJobDirectories = common dso_local global i32 0, align 4
@NumRegisteredJobDirectories = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ResourceOwnerEnlargeJobDirectories(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  store i32 0, i32* %3, align 4
  %4 = load i32, i32* @RegisteredResownerCallback, align 4
  %5 = icmp ne i32 %4, 0
  br i1 %5, label %9, label %6

6:                                                ; preds = %1
  %7 = load i32, i32* @MultiResourceOwnerReleaseCallback, align 4
  %8 = call i32 @RegisterResourceReleaseCallback(i32 %7, i32* null)
  store i32 1, i32* @RegisteredResownerCallback, align 4
  br label %9

9:                                                ; preds = %6, %1
  %10 = load i32*, i32** @RegisteredJobDirectories, align 8
  %11 = icmp eq i32* %10, null
  br i1 %11, label %12, label %21

12:                                               ; preds = %9
  store i32 16, i32* %3, align 4
  %13 = load i32, i32* @TopMemoryContext, align 4
  %14 = load i32, i32* %3, align 4
  %15 = sext i32 %14 to i64
  %16 = mul i64 %15, 4
  %17 = trunc i64 %16 to i32
  %18 = call i64 @MemoryContextAlloc(i32 %13, i32 %17)
  %19 = inttoptr i64 %18 to i32*
  store i32* %19, i32** @RegisteredJobDirectories, align 8
  %20 = load i32, i32* %3, align 4
  store i32 %20, i32* @NumAllocatedJobDirectories, align 4
  br label %38

21:                                               ; preds = %9
  %22 = load i32, i32* @NumRegisteredJobDirectories, align 4
  %23 = add nsw i32 %22, 1
  %24 = load i32, i32* @NumAllocatedJobDirectories, align 4
  %25 = icmp sgt i32 %23, %24
  br i1 %25, label %26, label %37

26:                                               ; preds = %21
  %27 = load i32, i32* @NumAllocatedJobDirectories, align 4
  %28 = mul nsw i32 %27, 2
  store i32 %28, i32* %3, align 4
  %29 = load i32*, i32** @RegisteredJobDirectories, align 8
  %30 = load i32, i32* %3, align 4
  %31 = sext i32 %30 to i64
  %32 = mul i64 %31, 4
  %33 = trunc i64 %32 to i32
  %34 = call i64 @repalloc(i32* %29, i32 %33)
  %35 = inttoptr i64 %34 to i32*
  store i32* %35, i32** @RegisteredJobDirectories, align 8
  %36 = load i32, i32* %3, align 4
  store i32 %36, i32* @NumAllocatedJobDirectories, align 4
  br label %37

37:                                               ; preds = %26, %21
  br label %38

38:                                               ; preds = %37, %12
  ret void
}

declare dso_local i32 @RegisterResourceReleaseCallback(i32, i32*) #1

declare dso_local i64 @MemoryContextAlloc(i32, i32) #1

declare dso_local i64 @repalloc(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
